<resources>
    <string name="app_name">DoItTest</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="login_register">Login / Register</string>
    <string name="log_in">Log In</string>
    <string name="register">REGISTER</string>
    <string name="email_invalid">Email not valid</string>
    <string name="register_failure">Register failure</string>
    <string name="registration_failed">Registration failed</string>
    <string name="login_failure">Login failure</string>
    <string name="login_failed">Login failed</string>
    <string name="tasks">My Tasks</string>
    <string name="tasks_loading_failed">Tasks loading failed</string>
    <string name="tasks_loading_failure">Tasks loading failure</string>
    <string name="task_adding_failed">Task adding failed</string>
    <string name="task_adding_failure">Task adding failure</string>
    <string name="task_loading_failed">Task loading failed</string>
    <string name="task_loading_failure">Task loading failure</string>
    <string name="task_remove_failed">Task delete failed</string>
    <string name="task_remove_failure">Task delete failure</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="description">Description</string>
    <string name="notification">Notification</string>
    <string name="incorrect_id">Incorrect task id</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="sort">Sort</string>
    <string name="order">Order</string>
    <string name="sort_ascending">Sort ascending</string>
    <string name="sort_descending">Sort descending</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_priority">Sort by priority</string>
    <string name="delete_task">Delete Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="create_task">Create Task</string>
    <string name="empty_title">Title can\'t be empty</string>
    <string name="empty_priority">Priority not set</string>
    <string name="task_created">Task successfully created</string>
    <string name="task_updated">Task successfully updated</string>
    <string name="task_create_failed">Task creation failed</string>
    <string name="task_create_failure">Task creation failure</string>
    <string name="task_update_failed">Task update failed</string>
    <string name="task_update_failure">Task update failure</string>
    <string name="network_lost">Network disconnected!</string>
    <string name="network_found">Network connected!</string>
    <string name="not_set">Not set</string>
    <string name="set">SET</string>
    <string name="cancel">CANCEL</string>
</resources>
