<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/defaultMargin"
        tools:context=".views.tasks.EditTaskFragment">

    <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:layout_marginTop="@dimen/defaultMargin"
            app:layout_constraintTop_toBottomOf="@id/titleLabel"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="@dimen/defaultMargin"
            app:layout_constraintTop_toBottomOf="@+id/titleEditText"/>

    <TextView
            android:id="@+id/priorityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:layout_marginTop="@dimen/defaultMargin"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
            android:id="@+id/priorityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:divider="@drawable/horizontal_divider"
            app:layout_constraintTop_toBottomOf="@id/priorityLabel">

        <android.support.design.button.MaterialButton
                android:id="@+id/highPriorityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/high"
                android:gravity="center"
                android:textSize="@dimen/priorityTextSize"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <android.support.design.button.MaterialButton
                android:id="@+id/mediumPriorityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/normal"
                android:gravity="center"
                android:textSize="@dimen/priorityTextSize"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <android.support.design.button.MaterialButton
                android:id="@+id/lowPriorityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/low"
                android:gravity="center"
                android:textSize="@dimen/priorityTextSize"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    </LinearLayout>

    <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/defaultMargin"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/priorityLayout"/>

    <TextView
            android:id="@+id/dueDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="@dimen/defaultMargin"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:id="@+id/dueDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:textSize="@dimen/taskTitleSize"
            android:lines="1"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/defaultMargin"
            android:drawableRight="@drawable/ic_edit"
            android:drawablePadding="@dimen/halfMargin"
            android:drawableTint="@color/lightGrey"
            android:text="02/02/19 10:00"
            app:layout_constraintTop_toBottomOf="@id/dueDateLabel"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="@dimen/defaultMargin"
            app:layout_constraintTop_toBottomOf="@+id/dueDateTextView"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/notificationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            android:layout_marginTop="@dimen/defaultMargin">

        <TextView
                android:id="@+id/notificationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:id="@+id/notificationTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_set"
                android:gravity="center_vertical"
                android:drawableRight="@drawable/ic_arrow_right"
                android:drawableTint="@color/lightGrey"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="@dimen/defaultMargin"
            app:layout_constraintTop_toBottomOf="@+id/notificationLayout"/>

    <android.support.design.button.MaterialButton
            android:id="@+id/deleteTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_task"
            android:gravity="center"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>