<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/defaultMargin"
        tools:context=".views.tasks.EditTaskFragment">

    <ProgressBar
            android:id="@+id/detailsProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/detailsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

        <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="@dimen/taskTitleSize"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
                android:id="@+id/dueDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tuesday 19 Feb, 2019"
                app:layout_constraintTop_toBottomOf="@id/titleTextView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/defaultMargin"/>

        <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/defaultMargin"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/dueDateTextView"/>

        <TextView
                android:id="@+id/priorityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:layout_marginTop="@dimen/defaultMargin"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
                android:id="@+id/priorityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dueDateSize"
                android:gravity="center_vertical"
                android:layout_weight="3"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/ic_arrow_up"
                android:text="High"
                android:layout_marginTop="@dimen/defaultMargin"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintRight_toRightOf="parent"/>

        <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="@dimen/defaultMargin"
                app:layout_constraintTop_toBottomOf="@+id/priorityTextView"/>

        <android.support.constraint.ConstraintLayout
                android:id="@+id/notificationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                android:layout_marginTop="@dimen/defaultMargin">

            <TextView
                    android:id="@+id/notificationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    android:id="@+id/notificationTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_set"
                    android:gravity="center_vertical"
                    android:drawableTint="@color/lightGrey"
                    android:drawableRight="@drawable/ic_arrow_right"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="@dimen/defaultMargin"
                app:layout_constraintTop_toBottomOf="@+id/notificationLayout"/>

        <android.support.design.button.MaterialButton
                android:id="@+id/deleteTaskButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_task"
                android:gravity="center"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>