<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.MainActivity">

    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleGuideLine"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2"/>

    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/leftGuideLine"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15"/>

    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rightGuideline"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/loginLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/leftGuideLine"
            app:layout_constraintRight_toLeftOf="@id/rightGuideline">

        <TextView
                android:id="@+id/titleTextView"
                android:text="@string/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/signInSize"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/doubleMargin"
                app:layout_constraintTop_toBottomOf="@id/titleTextView">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:hint="E-mail"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultMargin"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/emailLayout">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/passWordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Switch
                android:id="@+id/loginRegisterSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_register"
                android:layout_marginTop="@dimen/defaultMargin"
                app:layout_constraintTop_toBottomOf="@id/passwordLayout"/>

        <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:layout_marginTop="@dimen/defaultMargin"
                app:layout_constraintTop_toBottomOf="@id/loginRegisterSwitch"/>

    </android.support.constraint.ConstraintLayout>

    <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            android:visibility="invisible"/>

</android.support.constraint.ConstraintLayout>